// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute http assets endpoint should return success 1`] = `
Object {
  "data": Object {
    "result": 3043.673871176232,
  },
  "result": 3043.673871176232,
  "statusCode": 200,
  "timestamps": Object {
    "providerDataReceivedUnixMs": 1641035471111,
    "providerDataRequestedUnixMs": 1641035471111,
  },
}
`;

exports[`execute http crypto endpoint should return success 1`] = `
Object {
  "data": Object {
    "result": 22978.232093447674,
  },
  "result": 22978.232093447674,
  "statusCode": 200,
  "timestamps": Object {
    "providerDataReceivedUnixMs": 1641035471111,
    "providerDataRequestedUnixMs": 1641035471111,
  },
}
`;

exports[`execute websocket crypto endpoint should return success 1`] = `
Object {
  "error": Object {
    "message": "The EA has not received any values from the Data Provider for the requested data yet. Retry after a short delay, and if the problem persists raise this issue in the relevant channels.",
    "name": "AdapterError",
  },
  "status": "errored",
  "statusCode": 504,
}
`;
